test_suite/tests/ui/string/validate/char_len_min_vs_char_len_max.rs
use nutype::nutype;

#[nutype(validate(char_len_min = 127, char_len_max = 63))]
pub struct Email(String);

fn main () {}
